# magic-agent

./: .gitignore  Cargo.toml  PLAN.md  README.md  RELEASE.md  release.sh
.github/workflows/: release.yml
docs/: ops.json
python/: resolve_bridge.py
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/interpreter/: client.rs  mod.rs  prompt.rs  schema.rs
src/resolve/: bridge.rs  context.rs  mod.rs  operations.rs
