[package]
name = "magic-agent"
version = "0.3.0"
edition = "2021"
description = "Direct CLI for DaVinci Resolve scripting operations"
license = "MIT"
repository = "https://github.com/decocereus/magic-agent"

[lib]
name = "magic_agent"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "magic-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
